# datastruct

./: .coveragerc  .pre-commit-config.yaml  .travis.yml  AUTHORS  BADGES.rst  CHANGES  MANIFEST.in  README.rst  setup.cfg
.github/workflows/: ci.yml
datastruct/: __init__.py  common.py  ds.py  exceptions.py  typing_ext.py  validators.py
datastruct/test/: test_base.py  test_convert.py  test_generics.py  test_nested.py  test_to_serializable_value.py
datastruct/testsuite/: test_base.py  test_common.py  test_convert.py  test_generics.py  test_typing_ext.py
